Trying out other text tools (from working with text TOP)

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -17,6 +17,13 @@
     <p> <strong> Lorem ipsum dolor </strong> sit amet, <em> I am a italian</em>consectetur adipiscing elit, sed do eiusmod tempor
   incididunt ut labore et dolore magna aliqua. </p>
 
+  <mark> marked text</mark>
+  <small> small text</small>
+  <del> del text</del>
+  <ins> ins text</ins>
+  <sub> subscript text</sub>
+  <sup> superscript text</sup>
+
   <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
   nisi ut aliquip ex ea commodo consequat. </p>
 </body>
