--- a/odin-links-and-images/pages/about.html
+++ b/odin-links-and-images/pages/about.html
@@ -7,6 +7,7 @@
     <title>Odin Links and Images</title>
 </head>
 <body>
-    <hq>About page</hq>
+    <h1>About page</h1>
+    <img src="../images/dog.jpg">
 </body>
 </html>
